--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.19.6)
 
-set(This IntPartTests)
+set(This NesTests)
 
-set(Sources IntPartTests.cpp)
+set(Sources NesTests.cpp)
 
 add_executable(${This} ${Sources})
-target_link_libraries(${This} PUBLIC gtest_main Intpart)
+
+target_link_libraries(${This} PUBLIC gtest_main lNes)
 
 add_test(NAME ${This} COMMAND ${This})
 
