chore: add build config full working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "source.organizeImports": false
   },
   "editor.formatOnSave": false,
+  "editor.formatOnType": true,
   "files.associations": {
     "*.stl ": "st",
     "*.java": "java",
